[gd_scene load_steps=2 format=3 uid="uid://buuyhoi8w5nc5"]

[ext_resource type="Script" uid="uid://4jqmc7rs7ecd" path="res://scripts/char/panals/SkillPathUI.gd" id="1_50kff"]

[node name="SkillShopPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -950.0
offset_bottom = -340.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_50kff")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 300)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
offset_top = 25.0
offset_right = 200.0
offset_bottom = 275.0

[node name="tree_container" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 2
offset_top = 269.0
offset_right = 50.0
offset_bottom = 300.0
text = "Close"

[node name="InfoLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
